public/scss/styles.scss
/* ... */
// Tablet - Portrait

  // /* 
  // Tablet - Landscape
@media only screen and (min-width:720px) and(max-aspect-ratio:2)  {
  /* CSS code for tablet devices */
  .display-container{
    // max-width:92vw;
    // max-height:92vh;
  }
  .header{
    font-size:30px;
    // padding-bottom:30px;
    margin-bottom:50px;
    padding-left:40px;
    padding-right:25px;
  }
  .icon-container{
    width:130px;
    height:130px;
    margin:10px;
  }
  .icon-text, .operator-text{
    font-size:24px;
  }
  .bottom{
    justify-content: space-between;
    width:90vw;
  }
  .nav-button{
    font-size:2.75em;
    width:125px;
    height:75px;
    
  }
  .icon{
    font-size:3.75em;
  }
  .inner{
    // width:calc(50% - 100px);
    // margin:10px;
  }
  .flash-text{
    font-size:3.25em;
  }
  .flash-answer-box,.flash-question-box{
    max-width:400px;
    height:300px;
    font-size:1.4em;
  }
  .question{
    min-width:400px;
    height:300px;
  font-size:1.8em;

  }
  .option{
    max-width:150px;
    height:100px;
  font-size:2em;

  }
.flash-middle{
  margin:0 100px;
}
.quiz-correctness-scores{
  margin:  20px 0;
  >*{
    font-size:1.6em;
  }
}
.quiz-question{
  height:250px;
}
.progress-container{
  // flex-direction: row;
  width:100%;
  margin:0;
}

}
@media only screen and (min-width:720px) and (max-aspect-ratio:2) and (orientation:landscape) {
  .display-container{
    // max-width:92vw;
    // max-height:92vh;
  flex-direction: row;

  }
.header{
  font-size:32px;
  // padding-bottom:30px;
}
.icon-container{
  width:130px;
  height:130px;
  margin:10px;
}
.icon-text, .operator-text{
  font-size:24px;

}
.bottom{
  position: absolute;

  justify-content: space-between;
  width:90vw;
}
.nav-button{
  font-size:2.75em;
  width:125px;
  height:75px;
  
}
.icon{
  font-size:3.75em;
}
.middle{
  justify-content: flex-start;
  flex-basis:400px;
}
.middle-inner{
  justify-content: center;
width:500px;
}
.top{
  justify-content: flex-end;
  padding-right:30px;
  flex-basis:300px;
}
.flash-text{
  font-size:3.25em;
}
.flash-answer-box,.flash-question-box{
  max-width:400px;
  height:300px;
  font-size:1.4em;
}
.mc-top{
  flex-basis:40%;
}
.mc-middle-lower{
  flex-basis:60%;
}
.question{
  min-width:400px;
  height:300px;
  font-size:1.8em;
  // border:7px dashed $chalk-white;
}
.option{
  max-width:150px;
  height:100px;
  font-size:2em;
}
.flash-middle{
  margin: 0 100px;
}
.flash-upper{
  max-width:400px;
}
.quiz-container{
  flex-direction:column;
  padding-top:0%;
  justify-content: center;
}
.quiz-middle-lower{
  display: flex;
  flex-direction: row-reverse;
}
.score-container{
  width:100%
}
.icon-small{
  font-size:3em;
}
.progress-container{
  // flex-direction: row;
  width:100%;
  margin:0;
}
.game-container{
  justify-content: center;
}
}
// Other
// @media only screen and (min-width: 1025px) and (orientation:landscape){
//   /* CSS code for desktop devices */

//  .bottom{
//   justify-content: space-between;
//  }

// }
// @media only screen and (min-width: 1025px) {
//   /* CSS code for desktop devices */

//  .bottom{
//   justify-content: space-evenly;
//  }

// }
// 767

